# tree-sitter-handlebars

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: publish.yml
bindings/c/: tree-sitter-handlebars.pc.in
bindings/c/tree_sitter/: tree-sitter-handlebars.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_handlebars/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterHandlebarsTests/: TreeSitterHandlebarsTests.swift
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: blocks.txt  comments.txt  decorators.txt  expressions.txt  integration.txt  literals.txt  partials.txt  paths.txt  raw_blocks.txt  subexpressions.txt
